[gd_scene load_steps=9 format=3 uid="uid://d0ucso2y2x77o"]

[ext_resource type="Script" path="res://HUD.gd" id="1_0k33q"]
[ext_resource type="Texture2D" uid="uid://vshxj5xr21il" path="res://art/startscreen.png" id="2_edks0"]
[ext_resource type="PackedScene" uid="uid://draq3x3t6waeu" path="res://lives.tscn" id="2_w8mi1"]
[ext_resource type="FontFile" uid="uid://nf5wnen7byh5" path="res://art/font/upheaval/upheavtt.ttf" id="3_o8ejs"]
[ext_resource type="PackedScene" uid="uid://dvvtn0102djbo" path="res://mute_button.tscn" id="4_y3b8p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4x43s"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="InputEventAction" id="InputEventAction_1k7tw"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_v3frc"]
events = [SubResource("InputEventAction_1k7tw")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0k33q")

[node name="Lives" parent="." instance=ExtResource("2_w8mi1")]

[node name="Background" type="TextureRect" parent="."]
offset_top = -16.0
offset_right = 1920.0
offset_bottom = 1079.0
texture = ExtResource("2_edks0")
expand_mode = 1

[node name="Message" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_o8ejs")
theme_override_font_sizes/font_size = 120
text = "Royal 
Rebels"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.474479
anchor_top = 0.989815
anchor_right = 0.561979
anchor_bottom = 1.04722
offset_left = -128.0
offset_top = -251.0
offset_right = 56.0
offset_bottom = -193.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_o8ejs")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_4x43s")
shortcut = SubResource("Shortcut_v3frc")
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MuteButton" parent="." instance=ExtResource("4_y3b8p")]
offset_left = 1777.0
offset_top = 10.0
offset_right = 1874.0
offset_bottom = 107.0

[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
